--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,22 +1,9 @@
-defaults: &defaults
-  host: localhost
-  # mongoid defaults for configurable settings
-  autocreate_indexes: false
-  allow_dynamic_fields: true
-  include_root_in_json: false
-  parameterize_keys: true
-  persist_in_safe_mode: false
-  raise_not_found_error: true
-  reconnect_time: 3
 development:
-  <<: *defaults
-  database: sdodonnell
-test: &TEST
-  <<: *defaults
-  database: sdodonnell
-cucumber:
-  <<: *TEST
-# set these environment variables on your prod server
-production:
-  host: <%= 'localhost' %>
-  port: <%= '27017' %>
+  sessions:
+    default:
+      database: sdodonnell
+      hosts:
+        - localhost:27017
+      options:
+  options:
+    allow_dynamic_fields: false
